--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <ur>
             <li><a href="./02_表格操作.html">1. 表格操作</a></li>
             <li><a href="./雪花飘飘.html">2. 雪花飘飘</a></li>
+            <li><a href="./EducationDemo/index.html">3. 哈工大出版社在线教育网练习</a></li>
         </ur>
     </div>
 </body>
